--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duoc</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -26,7 +27,7 @@
     </aside>
 
     <footer>
-        <p>Aqui va el <footer></footer></p>
+        <p>Aqui va el footer</p>
     </footer>
 
 
